<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    tools:context="com.ncr.mobilepicklist.activities.ActMain">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <com.ncr.mobilepicklist.utils.TopMenu
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
            <!--<Button-->
            <!--android:id="@+id/closeBtn"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:onClick= "exitApp"-->
            <!--android:background="@drawable/exit" />-->
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pLTakePic"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:padding="20dp"
            android:visibility="visible">
            <LinearLayout
                android:id="@+id/llInsertRapIP"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rapIpLbl"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    />
                <EditText
                    android:id="@+id/txtRAPIP"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:singleLine="true"
                    android:background="@drawable/layout_border"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="80dp"
                    android:text="@string/connectBtn"
                    android:textStyle="bold"
                    android:onClick="connectToRAP"
                    android:background="@drawable/radiusbutton"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/llConnectToRapLoad"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:id="@+id/txtGetRapDataStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lookingRapLbl"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    />
                <ProgressBar
                    android:id="@+id/progBarConnectToRap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:minHeight="90dp"
                    android:minWidth="90dp"
                    android:maxHeight="90dp"
                    android:maxWidth="90dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/llConnectToRapResult"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connectRapResult"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/llConnectToRapError"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connectRapResultErrLbl"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:id="@+id/connectRapErrorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messageLbl"
                    android:textSize="15dp"
                    android:layout_marginBottom="5dp"
                    />
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connectRapTryAgainBtn"
                    android:padding="5dp"
                    android:layout_margin="15dp"
                    android:onClick="reconnect"
                    android:background="@drawable/radiusbutton"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connectRapChangeIpBtn"
                    android:padding="5dp"
                    android:layout_margin="15dp"
                    android:onClick="changeIP"
                    android:background="@drawable/radiusbutton"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>