<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    tools:context="com.ncr.mobilepicklist.activities.ActSaveItemConfirm">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <com.ncr.mobilepicklist.utils.TopMenu
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
            <!--<Button-->
            <!--android:id="@+id/closeBtn"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:onClick= "exitApp"-->
            <!--android:background="@drawable/exit" />-->
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pLInsertUPC"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:padding="20dp"
            android:visibility="visible">
            <LinearLayout
                android:id="@+id/llConfirmUPC"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saveItemQuestionLbl"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:id="@+id/txtItemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Item Confirmation Data"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    />

                <LinearLayout
                    android:id="@+id/pLBtn"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:text="@string/saveBtn"
                        android:textStyle="bold"
                        android:onClick="saveUPC"
                        android:background="@drawable/radiusbutton"/>
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:text="@string/backBtn"
                        android:textStyle="bold"
                        android:onClick="returnToInsertUPC"
                        android:background="@drawable/radiusbutton"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llUPCsaved"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:id="@+id/txtItemConfirmMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itemSaveConfirmLbl"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:text="@string/okBtn"
                        android:textStyle="bold"
                        android:onClick="returnToTakePhoto"
                        android:background="@drawable/radiusbutton"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llSaveImageLoad"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:id="@+id/txtGetRapDataStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itemProcessingLbl"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    />
                <ProgressBar
                    android:id="@+id/progBarConnectToRap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:minHeight="90dp"
                    android:minWidth="90dp"
                    android:maxHeight="90dp"
                    android:maxWidth="90dp"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
