<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    tools:context="com.ts.mobilepicklist.activities.ActInsertUPC">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <com.ncr.mobilepicklist.utils.TopMenu
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
            <!--<Button-->
            <!--android:id="@+id/closeBtn"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:onClick= "exitApp"-->
            <!--android:background="@drawable/exit" />-->
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pLInsertUPC"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:padding="20dp"
            android:visibility="visible">
            <LinearLayout
                android:id="@+id/llInsertUPC"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcLbl"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    />
                <EditText
                    android:id="@+id/txtUPC"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:singleLine="true"
                    android:background="@drawable/layout_border"/>
                <LinearLayout
                    android:id="@+id/pLBtn"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:text="@string/saveBtn"
                        android:textStyle="bold"
                        android:onClick="saveUPC"
                        android:background="@drawable/radiusbutton"/>
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:text="@string/cancelBtn"
                        android:textStyle="bold"
                        android:onClick="returnToTakePhoto"
                        android:background="@drawable/radiusbutton"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/llInsertUPCandCategory"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.09"
                    android:text="@string/nameLbl"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textSize="20dp"
                    />
                <EditText
                    android:id="@+id/txtItemName"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.09"
                    android:layout_marginBottom="5dp"
                    android:singleLine="true"
                    android:gravity="center"
                    android:background="@drawable/layout_border"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.09"
                    android:text="@string/upcLbl"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textSize="20dp"
                    />
                <EditText
                    android:id="@+id/txtUPCinserted"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.09"
                    android:layout_marginBottom="5dp"
                    android:singleLine="true"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:background="@drawable/layout_border"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.09"
                    android:text="@string/categoryLbl"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textSize="20dp"
                    />
                <Button
                    android:id="@+id/txtCategory"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.09"
                    android:onClick="popupChooseCategory"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/layout_border"/>

                <LinearLayout
                    android:id="@+id/pLBtn"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:padding="10dp"
                    android:layout_marginTop="30dp"
                    android:visibility="visible">
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/saveBtn"
                        android:textStyle="bold"
                        android:onClick="saveNewUPC"
                        android:background="@drawable/radiusbutton"/>
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/cancelBtn"
                        android:textStyle="bold"
                        android:onClick="returnToInsUPC"
                        android:background="@drawable/radiusbutton"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llCheckingItemLoad"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:id="@+id/txtGetItemDataStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkingItemLbl"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    />
                <ProgressBar
                    android:id="@+id/progBarCheckingItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:minHeight="90dp"
                    android:minWidth="90dp"
                    android:maxHeight="90dp"
                    android:maxWidth="90dp"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
